Creation of the resources for the people attended  model
